--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -4,6 +4,122 @@
     width: 20%;
 }
 
+.Classes {
+    display: flex;
+    align-items: center;
+    
+    width: 100%;
+    height: 12%;
+    background-color: var(--dark-color);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.Classes > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    flex-grow: 1;
+    height: 100%;
+    gap: 10%;
+
+    transition-property: flex-grow, background-color;
+    transition: 350ms ease;
+}
+
+.Classes > div > h3 {
+    font-size: var(--step--1);
+    font-weight: 500;
+    transition: font-weight 350ms ease;
+}
+
+.Classes > div > div {
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+
+    width: 40%;
+    height: 40%;
+}
+
+.Classes > .Active > h3 {
+    font-weight: 800;
+}
+
+.Classes > .Active {
+    /* transform: scale(1.3, 1.3); */
+    flex-grow: 1.75;
+    background-color: var(--terciary-color);
+}
+
+
+
+.Dark .Arbalist > div {
+    background-image: url(../../../public/Icons/Arbalist.png);
+}
+
+.Arbalist > div {
+    background-image: url(../../../public/Icons/ArbalistLight.png);
+}
+
+.Dark .Lancer > div {
+    background-image: url(../../../public/Icons/Lancer.png);
+}
+
+.Lancer > div {
+    background-image: url(../../../public/Icons/LancerLight.png);
+}
+
+.Dark .Sorcerer > div {
+    background-image: url(../../../public/Icons/Sorcerer.png);
+}
+
+.Sorcerer > div {
+    background-image: url(../../../public/Icons/SorcererLight.png);
+}
+
+.Dark .Taoist > div {
+    background-image: url(../../../public/Icons/Taoist.png);
+}
+
+.Taoist > div {
+    background-image: url(../../../public/Icons/TaoistLight.png);
+}
+
+.Dark .Warrior > div {
+    background-image: url(../../../public/Icons/Warrior.png);
+}
+
+.Warrior > div {
+    background-image: url(../../../public/Icons/WarriorLight.png);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .ItemList {
     width: 100%;
     height: auto;
@@ -23,7 +139,7 @@
     overflow-y: scroll;
     overflow-x: hidden;
 
-    height: 90%;
+    height: 77%;
     padding: clamp(0.1rem, .5vw + .5rem, 2000rem);
 }
 
@@ -42,7 +158,7 @@
     padding: 1rem 1.75rem;
     text-align: center;
 
-    margin: 2rem auto;
+    margin: 2rem clamp(0.1rem, 1vw + 0.5rem, 2000rem);
 
     transition-property: border, background-color;
     transition-duration: 250ms;
@@ -202,37 +318,6 @@
 .ItemUI.Active:hover {
     transform: scale(.92, .92) translateX(3%);
 }
-
-
-
-
-/**************************************************************
-
-                    ITEM RARITY COLORS!!
-
-**************************************************************/
-
-
-.Common {
-    color: var(--common);
-}
-
-.Uncommon {
-    color: var(--uncommon);
-}
-
-.Rare {
-    color: var(--rare);
-}
-
-.Epic {
-    color: var(--epic);
-}
-
-.Legendary {
-    color: var(--legendary);
-}
-
 
 
 @media (max-width: 1500px) {
