--- a/src/Components/CategoryFilter/CategoryFilter.css
+++ b/src/Components/CategoryFilter/CategoryFilter.css
@@ -31,7 +31,9 @@
     justify-content: center;
 
     margin: 2% 0;
-    padding: 1rem;
+    padding: 5%;
+    padding-bottom: 10%;
+    width: 100%;
 
     cursor: pointer;
 
@@ -65,6 +67,10 @@
     transition-property: transform, background-color, filter;
     transition-duration: 200ms;
     transition-timing-function: ease-in;
+}
+
+.RarityDiv .CategoryImg {
+    width: 40%;
 }
 
 .RarityTitle {
