--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -21,7 +21,8 @@
 
 
 .LogoContainer {
-    width: clamp(0.1rem, 10vw + 1rem, 220px);
+    width: max-content;
+    height: 90%;
     margin: 0 5%;
 }
 
@@ -35,6 +36,8 @@
 
     height: 100%;
     width: 70%;
+
+    gap: 2rem;
 
     list-style-type: none;
 }
@@ -113,7 +116,7 @@
     width: 10%;
     margin: 0 5vw;
 
-    transform: translateY(31%);
+    transform: translateY(30%);
 }
 
 
@@ -123,7 +126,7 @@
     align-items: center;
     flex-direction: column;
 
-    width: 80%;
+    width: 12rem;
     height: 30%;
 
     cursor: pointer;
@@ -134,6 +137,10 @@
     transform: translateY(20%);
 
     transition: background-color 350ms ease, width 350ms ease, height 350ms ease, transform 350ms ease;
+}
+
+.LanguageDropdown p {
+    font-size: var(--step-0);
 }
 
 .Languages.true .LanguageDropdown {
@@ -154,20 +161,20 @@
     justify-content: space-around;
     align-items: center;
 
-    height: 0vh;
-    width: 80%;
+    height: 10rem;
+    width: 100%;
     background-color: var(--terciary-color);
     border-radius: 7%;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     margin-top: 5%;
+    clip-path: inset(0 0 100% 0);
 
-    transition: 400ms height ease, 400ms width ease;
+    transition: clip-path 300ms ease;
 }
 
 .Languages.true .Choices {
-    height: 10vh;
-    width: 100%;
+    clip-path: inset(0 0 0 0);
 }
 .Languages .Choices > p {
     display: flex;
@@ -176,15 +183,11 @@
 
     cursor: pointer;
 
-    font-size: 0px;
+    font-size: var(--step-0);
     width: 100%;
     height: 50%;
 
     transition: 400ms font-size ease, background-color 350ms ease;
-}
-
-.Languages.true .Choices > p {
-    font-size: var(--step-0);
 }
 
 .Choices > p:hover {
@@ -202,10 +205,10 @@
 
     background-color: var(--secondary-color);
 
-    height: 65%;
-    width: 10%;
-    border-radius: 5%;
-    padding: 2%;
+    height: 50%;
+    width: 20rem;
+    border-radius: .5rem;
+    padding: 3rem;
 
     cursor: pointer;
 
